1) #31 fixed 2) #36 added new ant target - stress-test 3) #35 fixed